Update user inputs; capture "score" using click on relative field; push updates via socket.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -18,6 +18,8 @@
 
 <script>
 $(function() {
+  App.uuid = '<%= @current_user.uuid %>';
+  
   var handle = null;
   $handle = $('#handle')
   $width = $('#width');
