Change input to slider; refine welcome flow; add base styles.

--- a/app/javascript/components/ScoreInput/ScoreInput.css
+++ b/app/javascript/components/ScoreInput/ScoreInput.css
@@ -1,3 +1,53 @@
+body, input {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 14px;
+}
+
+input {
+  padding: 5px;
+}
+
+* {
+  box-sizing: border-box;
+}
+
 .wrapper {
-  
+  position: relative;
+  padding: 25px 0 5px;
+  margin: 10px;
+}
+
+.label {
+  position: absolute;
+  top: 0;
+  pointer-events: none;
+}
+
+.min {
+  composes: label;
+  left: 0;
+  text-align: left;
+}
+
+.max {
+  composes: label;
+  right: 0;
+  text-align: right;
+}
+
+.track {
+  height: 10px;
+  background-color: #DDD;
+  pointer-events: none;
+}
+
+.knob {
+  position: absolute;
+  top: 20px;
+  width: 8px;
+  height: 20px;
+  background-color: #222;
+  border-radius: 2px;
+  margin-left: -4px;
+  pointer-events: none;
 }
